<resources>
    <string name="app_name">Szafa vendingowa</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="locker_number">Numer szafy</string>
    <string name="user_number">Numer użytkownika</string>
    <string name="password">Hasło</string>
    <string name="documents">Dokumenty</string>
    <string name="documents_take">Pobierz</string>
    <string name="documents_order">Zamów</string>
    <string name="account">Konto</string>
    <string name="account_settings">Ustawienia konta</string>

    <string name="scan_button">Skanuj</string>
    <string name="ordered_number">Liczba zamówionych:</string>
    <string name="order_button">Zamów</string>
    <string name="collected_number">Liczba pobranych:</string>
    <string name="toast_sent_correctly">Wysłano poprawnie!</string>
    <string name="exception_occurres">Wystąpił błąd</string>

    <string name="Login">Zaloguj</string>
    <string name="password_prompt">Hasło</string>
    <string name="locker_number_prompt">Numer szafy</string>
    <string name="login_prompt">Login</string>

    <string name="error_invalid_email">Niepoprawny login</string>
    <string name="error_invalid_locker_nr">Niepoprawny numer szafy</string>
    <string name="error_invalid_password">Niepoprawne hasło</string>
    <string name="error_passwords_not_matching">Podane hasła są różne</string>
    <string name="error_incorrect_password">Niepoprawne hasło</string>
    <string name="error_field_required">To pole jest wymagane</string>
    <string name="error_no_such_user">Nie ma takiego użytkownika</string>
    <string name="error_no_such_locker">Nie ma takiej szafy</string>

    <string name="connectoin_error_long_message">Nastąpił błąd połączenia. Sprwawdź połączenie z internetem i spróbuj ponownie.
    </string>
    <string name="connection_error">Błąd połączenia</string>
    <string name="locker_opened">Szafa jest otwarta</string>
    <string name="couldnt_open_locker">Nie udało się otworzyć szafy</string>
    <string name="opening">Otwieranie...</string>
    <string name="title_activity_login2">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="product_not_found">Nie znaleziono towaru</string>
    <string name="products_quantity">Liczba produktów</string>
    <string name="logout">Wyloguj</string>
    <string name="change_password">Zmień hasło</string>
    <string name="stocktaking">Inwentaryacja</string>
    <string name="repeat_password_prompt">Powtórz hasło</string>

    <string name="password_changed_toast">Hasło pomyślnie zmienione</string>
    <string name="password_confirmation_order">By zmienić hasło podaj ponownie stare hasło</string>
    <string name="logout_question">Czy na pewno chcesz się wylogować?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="document_not_sent">Wystąpił błąd i nie udało się wysłać dokumentu. Spróbuj ponownie.</string>
    <string name="orders_not_sent">Nie udało się wysłać zamówień</string>
    <string name="collects_not_sent">Nie udało się wysłać popbranych produktów</string>

</resources>
