<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/back_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <EditText
        android:id="@+id/numberPicker2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:inputType="number"
        android:text="0"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/numberPickerMinus2"
        app:layout_constraintTop_toBottomOf="@+id/orderedNumberTV" />

    <Button
        android:id="@+id/numberPickerMinus2"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="35dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:text="-"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/numberPicker2"
        app:layout_constraintStart_toEndOf="@+id/image_view"
        app:layout_constraintTop_toTopOf="@+id/numberPicker2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/numberPickerPlus2"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="35dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:text="+"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/numberPicker2"
        app:layout_constraintStart_toEndOf="@+id/numberPicker2"
        app:layout_constraintTop_toTopOf="@+id/numberPicker2"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="128dp"
        android:layout_height="220dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:foregroundGravity="left"
        android:scaleType="fitStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_text_view"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@color/colorAccent" />

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="TextView"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/deleteButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="@+id/title_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text_view" />

    <EditText
        android:id="@+id/numberPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:inputType="number"
        android:text="0"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/numberPickerMinus"
        app:layout_constraintTop_toBottomOf="@+id/takenNumberTV" />

    <Button
        android:id="@+id/numberPickerMinus"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="35dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:text="-"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/numberPicker"
        app:layout_constraintStart_toEndOf="@+id/image_view"
        app:layout_constraintTop_toTopOf="@+id/numberPicker" />

    <Button
        android:id="@+id/numberPickerPlus"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="35dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:text="+"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/numberPicker"
        app:layout_constraintStart_toEndOf="@+id/numberPicker"
        app:layout_constraintTop_toTopOf="@+id/numberPicker" />

    <TextView
        android:id="@+id/orderTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/order_button"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/image_view"
        app:layout_constraintTop_toBottomOf="@+id/numberPicker" />

    <TextView
        android:id="@+id/orderedNumberTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/ordered_number"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/image_view"
        app:layout_constraintTop_toBottomOf="@+id/numberPicker" />

    <TextView
        android:id="@+id/takenNumberTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/collected_number"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/image_view"
        app:layout_constraintTop_toBottomOf="@+id/description_text_view" />

    <ImageButton
        android:id="@+id/deleteButton"
        style="@android:style/Widget.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@null"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_delete" />

</android.support.constraint.ConstraintLayout>